# ai4animation-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
datasets/: README.md
models/: README.md  quadruped-contact-synthetic-v0.a4a
src/: bvh.rs  contact.rs  gait.rs  ik.rs  lib.rs  mann.rs  math.rs
