[package]
name = "ai4animation-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Clean-room Rust runtime primitives for responsive data-driven character animation"
license = "MIT"
repository = "https://github.com/pajama-studio/ai4animation-rs"
readme = "README.md"
keywords = ["animation", "ik", "quadruped", "locomotion", "gamedev"]
categories = ["game-development", "graphics"]

[lib]
name = "ai4animation_rs"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
